welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: '(' expected but identifier found.
  if estFaceMur {
     ^SlugTracking:16: error: illegal start of simple expression
    }
    ^