welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var vert: Boolean = false;
  	avance()
    while (vert == false) {
  if estFaceMur {
    droite()
  }
  else if (getCouleurSol() == Color.green) {
      vert = true
     avance()}
  else if {
    recule()
    droite()
  }
    }

  return vert
  }
